# wann-soll-ich-lueften.de

./: .gitignore  README.md  pyproject.toml
backend/: backend.py
server/: backend.py  requirements.txt  scaleupdater.py  server.py
server/cities/: cities
server/data/: avg_aqi  avg_no2  avg_pm10  avg_pm25
server/static/: cities.txt
server/templates/: daten.html  doc-api.html  home.html  main.html  more.html  script.js  style.css  table.html
wsil/: api.py  logic.py  main.py  waqi_wrapper.py
wsil/templates/: index.html
